--- a/imusic/app/globals.css
+++ b/imusic/app/globals.css
@@ -27,7 +27,7 @@ body {
 }
 
 .project-container {
-  perspective: 1000px;
+  perspective: 600px;
   overflow-x: scroll;
   padding: 100px 0;
   white-space: nowrap;
@@ -36,14 +36,14 @@ body {
 .project-stack {
   display: inline-block;
   transform: rotateY(45deg) skew(-10deg);
-  padding: 0 200px;
+  padding: 0  200px;
 }
 
 .project-card {
   display: inline-block;
   width: 300px;
   height: 400px;
-  background-color: white;
+  background-color: black;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   margin-right: -200px;
   transition: all 0.3s ease;
@@ -53,13 +53,13 @@ body {
 .project-card img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
-  transition: all 0.3s ease;
+  object-fit: contain;
+ 
 }
 
 .project-card:hover {
-  transform: translateY(-10px);
-  z-index: 10;
+  transform: translateY(-100px);
+
 }
 
 .project-stack:hover .project-card:not(:hover) img {
@@ -73,20 +73,21 @@ body {
 .modal {
   display: none;
   position: fixed;
-  z-index: 1000;
-  left: 0;
+  z-index: 1;
+  right: 0px;;
+  
   top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
+  width: 30%;
+  height: 30%;
+
   background-color: rgba(0, 0, 0, 0.4);
 }
 
 .modal-content {
-  background-color: #fefefe;
+  background-color: #000000;
   margin: 15% auto;
-  padding: 20px;
-  border: 1px solid #888;
+ 
+  border: 1px solid #ab3131;
   width: 80%;
   max-width: 600px;
 }
