--- a/imusic/app/globals.scss
+++ b/imusic/app/globals.scss
@@ -30,19 +30,10 @@ body {
 
 
 
-.scroller {
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  white-space: nowrap;
-  display: flex;
-  scroll-snap-type: x mandatory;
-  scroll-timeline: --scroll-timeline;
-  scroll-timeline-axis: x;
-}
+.music-player-button{
+background-color: black;
+ ;  
 
-.scroller::-webkit-scrollbar {
-  display: none;
 }
 
 @layer components {
@@ -60,31 +51,14 @@ body {
 
 ; 
   }
-  
-  .card-transitioning {
-    opacity: 50%;
- 
-  }
 
     .card .project-card {
       width: 100%;
       height: 100%;
       position: relative;
-      transition: transform .5s cubic-bezier(0.23, 1, 0.32, 1);
- background-color: #ffffff;
-      margin: auto;
 
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      transform-style: preserve-3d;
-      overflow: hidden;
-    
-    /* Center the active card */
-    // transform: translate3d(0, 0, ${(props) => props.position * -100}px) 
-    //           rotateY(${(props) => props.position * 10}deg)};
-              
-              /* Z-axis movement */
+ background-color: #ffffff;
+
   }
   
   
@@ -117,48 +91,10 @@ body {
     object-fit: cover;
     width: 100%;
     height: 100%;
-    border-radius: var(--dim-card-border-radius);
-    transform-style: preserve-3d;
-  }
-  
-  /* Smooth transition for carousel movement */
-  .card-stack[data-active-index] .card {
-    transition: transform 0.5s cubic-bezier(0.23, 1, 0.32, 1);
+
   }
   
 
-
-@for $i from 1 through $card-count {
-  .card:nth-child(#{$i}) {
-    animation: animate#{$i}-inactive linear forwards;
-    animation-timeline: --scroll-timeline;
-  }
-
-  [data-active-index="#{$i - 1}"] .card:nth-child(#{$i}) {
-    animation: animate#{$i}-active linear forwards;
-    animation-timeline: --scroll-timeline;
-  }
-
-  .card:nth-child(#{$i}) img {
-    animation: animate-card-image-#{$i} linear forwards;
-    animation-timeline: --scroll-timeline;
-  }
-
-  [data-active-index="#{$i - 1}"] .card-stack {
-    animation: card-stack-#{$i} linear forwards;
-    animation-timeline: --scroll-timeline;
-  }
-
-  .card:nth-child(#{$i})::before {
-    animation: card-bg linear forwards;
-    animation-timeline: --scroll-timeline;
-  }
-
-  @include animate-active($i);
-  @include animate-inactive($i);
-
-  @include card-stack-keyframes($i);
-}
 
 .modal {
   position: fixed;
