--- a/imusic/app/globals.scss
+++ b/imusic/app/globals.scss
@@ -5,7 +5,7 @@
 @tailwind utilities;
 // Now you can access mixins globally
 
-@import './mixins'; 
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -29,62 +29,35 @@ body {
 }
 
 
-
+@font-face {
+  font-family: Nippo-Regular;
+  src: url('./fonts/OTF/Nippo-Regular.otf'), format('truetype');
+}
 .music-player-button{
-background-color: black;
+
+font-family: 'Nippo-Regular';
+
  ;  
 
 }
 
-@layer components {
   
 
-  .card-stack {
-    position: absolute; /* Position relative to the parent container */
-    transform-style: preserve-3d;
-    perspective: 1000px; /* 3D perspective */
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-  /* Set the height to a smaller value */
+  
 
 ; 
-  }
+  
 
     .card .project-card {
       width: 100%;
       height: 100%;
       position: relative;
+color: black;
+ background-color: #00A3F9;
 
- background-color: #ffffff;
-
   }
   
   
-  
-  .card[data-position="1"] {
-    transform: translate3d(100%, 0, -300px) rotateY(30deg); /* Card to the right */
-    opacity: 30%;
-  }
-  
-  .card[data-position="-1"] {
-    transform: translate3d(-100%, 0, -300px) rotateY(-30deg); /* Card to the left */
-    opacity: 30%;
-  }
-  
-  /* Ensure cards moving out of view are smaller */
-  .card[data-position="2"],
-  .card[data-position="-2"] {
-    transform: translate3d(200%, 0, -600px) rotateY(50deg); /* Cards farther away */
-    opacity: 30%;
-  }
-  
-  .card[data-position="-3"],
-  .card[data-position="3"] {
-    transform: translate3d(300%, 0, -900px) rotateY(70deg); /* Cards even further back */
-    opacity: 30%;
-  }
 
   .card img {
     position: absolute;
@@ -113,5 +86,4 @@ background-color: black;
 
 .modal-open {
   opacity: 1; /* Show when modal is open */
-}
 }
