--- a/imusic/app/components/Cards/CardStack.scss
+++ b/imusic/app/components/Cards/CardStack.scss
@@ -16,7 +16,7 @@ body {
     position: relative;
     width: 100%;
     height: 300px;
-    background: #000;
+    background: #0B0407;
     overflow: hidden;
     perspective: 20px;
   
@@ -60,13 +60,13 @@ body {
   
     .details {
       position: absolute;
-      top: 0;
+      top: -20%;
       left: 0;
-      width: 70%;
+      width: 20%;
       height: 100%;
       background: #ffc107;
       transform-origin: right;
-      transform: perspective(2000px) ;
+      transform: perspective(2000px) rotateZ(90deg) ;
       transition: transform 0.5s;
   
       .center {
